Bug 391562. Pass aExtraState as nsnull to GetFinalState() if not needed. r=surkov, a=dsicore