accessible/src/atk/nsAccessibleWrap.cpp
@@ -792,7 +792,7 @@ GetAttributeSet(nsIAccessible* aAccessible)
     if (attributes) {
         // Deal with attributes that we only need to expose in ATK
         PRUint32 state, extraState;
-        aAccessible->GetFinalState(&state, &extraState);
+        aAccessible->GetFinalState(&state, nsnull);
         if (state & nsIAccessibleStates::STATE_HASPOPUP) {
           // There is no ATK state for haspopup, must use object attribute to expose the same info
           nsAutoString oldValueUnused;
