accessible/src/base/nsAccessibleEventData.cpp
@@ -359,7 +359,7 @@ nsAccStateChangeEvent::
   nsCOMPtr<nsIAccessible> accessible(GetAccessibleByNode());
   if (accessible) {
     PRUint32 state = 0, extraState = 0;
-    accessible->GetFinalState(&state, &extraState);
+    accessible->GetFinalState(&state, mIsExtraState ? &extraState : nsnull);
     mIsEnabled = ((mIsExtraState ? extraState : state) & mState) != 0;
   } else {
     mIsEnabled = PR_FALSE;
